--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.7.2
+dj-database-url==2.0.0
 Django==3.2.19
 django-environ==0.10.0
 environ==1.0
 Faker==18.10.1
+psycopg2-binary==2.9.6
 python-dateutil==2.8.2
 pytz==2023.3
 six==1.16.0
