--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.2.19
 django-environ==0.10.0
 environ==1.0
 Faker==18.10.1
+gunicorn==20.1.0
 psycopg2-binary==2.9.6
 python-dateutil==2.8.2
 pytz==2023.3
