modification for setting.py

--- a/djangobasic1/.env
+++ b/djangobasic1/.env
@@ -1,4 +1,4 @@
 SECRET_KEY='django-insecure-v@rrks=+z2@6+(53i%y7qdx1mfjh-bz)i5ngdqif-9^2=y)(p4'
 DEBUG=True
-MODE=DEV
+MODE=PRD
 DB_CONNECTION=postgres://django_todo_db_user:Q4fHrkyCtLfTR9ucjtixe5whBjWk2TIo@dpg-ci8v5h5ph6epoilb6690-a.oregon-postgres.render.com/django_todo_db
